--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.14",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "unplugin-vue-components": "^0.21.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
