Setup SASS and delete default Vue project

--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -16,6 +16,15 @@ jobs:
       - name: Install
         run: yarn
 
+      - name: ESlint
+        run: yarn lint
+
+      - name: Unit Testing
+        run: yarn test:unit
+
+      - name: E2E Testing
+        run: yarn test:e2e
+
       - name: Build
         run: yarn build
 
@@ -29,7 +38,6 @@ jobs:
         with:
           name: app-build
           path: ${{ github.sha }}.tar.gz
-
 
   upload:
     name: "Upload"
