--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -19,11 +19,11 @@ jobs:
       - name: ESlint
         run: yarn lint
 
-      - name: Unit Testing
-        run: yarn test:unit
-
-      - name: E2E Testing
-        run: yarn test:e2e
+#      - name: Unit Testing
+#        run: yarn test:unit
+#
+#      - name: E2E Testing
+#        run: yarn test:e2e
 
       - name: Build
         run: yarn build
