--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "unplugin-vue-components": "^0.21.1",
+    "vite-plugin-environment": "^1.1.2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
