--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -2,8 +2,10 @@
   "extends": "./tsconfig.app.json",
   "exclude": [],
   "compilerOptions": {
+    "module": "es2022",
+    "moduleResolution": "Node",
     "composite": true,
     "lib": [],
-    "types": ["node", "jsdom"]
+    "types": ["node", "jsdom"],
   }
 }
