--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Create deployment artifact
         env:
           GITHUB_SHA: ${{ github.sha }}
-        run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules *
+        run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git *
 
       - name: Store artifect for distribution
         uses: actions/upload-artifact@v2
@@ -85,3 +85,5 @@ jobs:
           script: |
             ln -s -f ${BASE_PATH}/.env.staging $RELEASE_PATH
             ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
+            cd $ACTIVE_RELEASE_PATH
+            npm run server:prod
