--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.6.4",
     "vite": "^2.9.14",
     "vite-plugin-ssr": "^0.4.13",
-    "vue": "^3.2.33"
+    "vue": "^3.2.33",
+    "vue-router": "^4.1.3"
   }
 }
