--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/compiler-sfc": "^3.2.33",
     "@vue/server-renderer": "^3.2.33",
+    "@vueuse/core": "^9.1.0",
+    "axios": "^0.27.2",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
+    "node-fetch": "^3.2.10",
+    "pinia": "^2.0.17",
     "sirv": "^2.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
@@ -23,5 +27,11 @@
     "vite-plugin-ssr": "^0.4.13",
     "vue": "^3.2.33",
     "vue-router": "^4.1.3"
+  },
+  "devDependencies": {
+    "less": "^4.1.3",
+    "sass": "^1.54.3",
+    "sass-loader": "^13.0.2",
+    "stylus": "^0.58.1"
   }
 }
