--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -83,7 +83,7 @@ jobs:
           port: ${{ secrets.VPS_PORT }}
           envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_PATH,LARAVEL_ENV
           script: |
-            ln -s -f ${BASE_PATH}/.env.staging $RELEASE_PATH
-            ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
-            cd $ACTIVE_RELEASE_PATH
+            ln -s -f ${BASE_PATH}/.env.staging ${RELEASE_PATH}
+            ln -s -n -f ${RELEASE_PATH} ${ACTIVE_RELEASE_PATH}
+            cd ${ACTIVE_RELEASE_PATH}
             npm run build
